[gd_scene load_steps=8 format=2]

[ext_resource path="res://actor/tank/Tank.gd" type="Script" id=1]
[ext_resource path="res://actor/tank/tank.png" type="Texture" id=2]
[ext_resource path="res://actor/tank/tank-gun.png" type="Texture" id=3]
[ext_resource path="res://box/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://hud/EnemyStats.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 4.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 3 )

[node name="Tank" type="Node2D"]
script = ExtResource( 1 )

[node name="Gun" type="Node2D" parent="."]
position = Vector2( 0, 3 )

[node name="Sprite" type="Sprite" parent="Gun"]
position = Vector2( 9, 0 )
texture = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="Gun"]
position = Vector2( 14, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TargetDetector" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -21 )
scale = Vector2( 9.41588, 4.56045 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetDetector"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 6

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
margin_top = -5.0
margin_bottom = 11.0
[connection signal="body_entered" from="TargetDetector" to="." method="_on_TargetDetector_body_entered"]
[connection signal="body_exited" from="TargetDetector" to="." method="_on_TargetDetector_body_exited"]
[connection signal="hit" from="HitBox" to="." method="_on_HitBox_hit"]

[editable path="HitBox"]
